--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-    <div class="box">
+    <div role="navigation" class="box">
         <div class="img-container">
         <img alt="nft-preview" src="image-equilibrium.jpg">
         <div>
