--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <title>NFT preview card component</title>
 </head>
 <body>
-    
-    <div role="navigation" class="box">
+
+    <div class="box">
         <div class="img-container">
         <img alt="nft-preview" src="image-equilibrium.jpg">
         <div>
@@ -35,6 +36,11 @@
              <img alt="user" src="image-avatar.png"> <h5> Creation of <button class="user-name" type="submit">Jules&nbsp;Wyvern </button> </h5>
         </div>
     </main>
+
+    <div role="contentinfo" class="attribution">
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+        Coded by <a href="https://www.frontendmentor.io/profile/4jdin">4jdin</a>.
+    </div>
 
   </body>
 </html>
