--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-    <div role="navigation" class="box">
+    <div class="box">
         <div class="img-container">
         <img alt="nft-preview" src="image-equilibrium.jpg">
         <div>
